--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@ tw-story {
 
 @media (max-width: 768px) {
   .texto {
-    font-size: 20px;}
+    top: 0.5em;
+    font-size: 16px;
+  width: 100%;}
 }
 
 i{
@@ -202,6 +204,11 @@ color: #e1bf66;}
 audio {
 color: #F8F6F0;
  opacity: 40%;}
+
+@media (max-width: 768px) {
+  audio {
+    height: 35px;}
+}
 
 /* === Botões no fundo fixo === */
 .botoes {
@@ -213,8 +220,12 @@ color: #F8F6F0;
   justify-content: center;
   gap: 2em;
   z-index: 20;
-  
-  
+}
+
+@media (max-width: 768px) {
+  .botoes {
+    
+    font-size: 18px;}
 }
 
 /* === Nomes Créditos == */
