--- a/index.html
+++ b/index.html
@@ -222,11 +222,6 @@ color: #F8F6F0;
   z-index: 20;
 }
 
-@media (max-width: 768px) {
-  .botoes {
-    
-    font-size: 18px;}
-}
 
 /* === Nomes Créditos == */
 
@@ -271,6 +266,13 @@ background: rgba(255, 255, 255, 0.15);
   -webkit-backdrop-filter: blur(30px);
   color: #F8F6F0;
  
+}
+
+@media (max-width: 768px) {
+  tw-link {
+    padding: 0.3em 1em;
+  font-size: 15px;
+  letter-spacing: 0;}
 }
 
 
