--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@ tw-story {
   .texto {
     top: 0.5em;
     font-size: 16px;
-  width: 100%;}
+  width: 100%;
+  }
 }
 
 i{
@@ -280,11 +281,12 @@ background: rgba(255, 255, 255, 0.15);
 @media (max-width: 768px) {
   tw-link,
   tw-link:visited{
-    padding: 0.5em 1.2em;
-  font-size: 15px;
+    padding: 0.8em 1.2em;
+  font-size: 17px;
   line-height: 1em;
   letter-spacing: 0.05em;
-  color: #F8F6F0 !important;}
+  color: #F8F6F0 !important;
+  text-align: center;}
 }
 
 
