--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ background: rgba(255, 255, 255, 0.15);
   line-height: 1em;
   letter-spacing: 0.05em;
   color: #F8F6F0 !important;
-  text-align: center;}
+  text-align: center !important;}
 }
 
 
