--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@ color: #F8F6F0;
   letter-spacing: 0.03rem;
 }
 
+@media (max-width: 768px) {
+
+.creditos {
+  font-size: 15px;
+  bottom: 4em;}
+}
+
 /* === Estilo dos links como botões === */
 tw-link,
 tw-link:visited
