--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ color: #F8F6F0;
 @media (max-width: 768px) {
 
 .creditos {
-  font-size: 15px;
-  bottom: 4em;}
+  font-size: 15px !important;
+  bottom: 4em !important;}
 }
 
 /* === Estilo dos links como botões === */
