--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ tw-story {
 
 @media (max-width: 768px) {
   .texto {
-    top: 0.5em;
+    top: 0em !important;
     font-size: 16px;
   width: 100%;
   }
@@ -235,7 +235,7 @@ color: #F8F6F0;
   font-size: 18px;
   font-family: 'Lexend', sans-serif;
   font-weight: 500;
-  opacity: 30%;
+  opacity: 430%;
   left: 2em;
   bottom: 2em;
   position: fixed;
@@ -247,7 +247,7 @@ color: #F8F6F0;
 
 .creditos {
   font-size: 15px !important;
-  bottom: 4em !important;}
+  bottom: 8em !important;}
 }
 
 /* === Estilo dos links como botões === */
@@ -291,7 +291,7 @@ background: rgba(255, 255, 255, 0.15);
     padding: 0.8em 1.2em;
   font-size: 17px;
   line-height: 1em;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.03em;
   color: #F8F6F0 !important;
   text-align: center !important;}
 }
