--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ tw-story {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 1em;
+  top: 1em;
   padding: 1.5em 1.5em 1em 1.5em;
   border-radius: 8px;
   
@@ -235,7 +235,7 @@ color: #F8F6F0;
   font-size: 18px;
   font-family: 'Lexend', sans-serif;
   font-weight: 500;
-  opacity: 430%;
+  opacity: 40%;
   left: 2em;
   bottom: 2em;
   position: fixed;
