--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ tw-story {
  background-size: cover; /* preenche o ecrã */
  background-position: center center;
  background-repeat: no-repeat;
- background-attachment: fixed; /* mantém o fundo fixo ao rolar */
+ /*background-attachment: fixed;  mantém o fundo fixo ao rolar */
  min-height: 100vh; /* garante altura mínima do ecrã */
  width: 100%;
  height: auto;
@@ -150,6 +150,7 @@ tw-story {
  background-position: top center; */
    overflow-x: hidden; /* evita scroll horizontal */
    overflow-y: hidden; /* evita scroll vertical */
+   
  }
   
 
@@ -554,11 +555,11 @@ Lisandra Caldeira
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="26" name="Carregamento" tags="" position="925,475" size="100,100">&lt;!-- Carregar os conteúdos primeiro --&gt;
 
 &lt;&lt;run $(&quot;#story&quot;).hide()&gt;&gt;
-</tw-passagedata><tw-passagedata pid="27" name="Introdução" tags="fundo0" position="825,350" size="100,100">&lt;div class=&quot;texto&quot;&gt;No âmbito da unidade curricular Narrativas Visuais Interativas, queremos contar-te o tradicional conto do &lt;i&gt;Patinho Feio&lt;/i&gt; de uma outra perspetiva. Esta narrativa repleta de aventuras e emoções é condicionada pelas escolhas que tomas.&lt;br&gt;&lt;br&gt;Quer estejas no computador ou no telemóvel, sugerimos que utilizes auscultadores para uma experiência mais imersiva. 
+</tw-passagedata><tw-passagedata pid="27" name="Introdução" tags="fundo0" position="825,350" size="100,100">&lt;div class=&quot;texto&quot;&gt;No âmbito da unidade curricular Narrativas Visuais Interativas, queremos contar-te o tradicional conto do &lt;i&gt;Patinho Feio&lt;/i&gt; de uma outra perspetiva. &lt;br&gt;&lt;br&gt;Esta narrativa repleta de aventuras e emoções é condicionada pelas escolhas que tomas.&lt;br&gt;&lt;br&gt;Quer estejas no computador ou no telemóvel, sugerimos que utilizes auscultadores para uma experiência mais imersiva. 
 
 &lt;/div&gt;
 
-&lt;div class=&quot;creditos&quot;&gt;
+&lt;div class=&quot;creditos&quot; style=&quot;opacity: 100%;&quot;&gt;
 João Caldeira
 João Carramanho
 Laura Benedito
