--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ tw-story {
     font-size: 16px;
   width: 100%;
     text-shadow: 0px 0px 2px black;
+    position: static !important;
   }
 }
 
