--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ tw-story {
 
 /* === Caixa de texto no topo === */
 .texto {
-  position: relative; /* Cria um contexto fixo para .texto e audio */
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
   top: 1em;
@@ -205,7 +205,7 @@ tw-story {
     font-size: 16px;
   width: 100%;
     text-shadow: 0px 0px 2px black;
-     position: relative !important; /* deixa de ser absoluta */
+    
   }
 }
 
