--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ tw-story {
 
 @media (max-width: 768px) {
   .texto {
+    padding: 0em !important;
     top: 0em !important;
     font-size: 16px;
   width: 100%;
