--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ tw-story {
   left: 50%;
   transform: translateX(-50%);
   top: 1em;
-  padding: 1.5em 1.5em 1em 1.5em;
+  /*padding: 1.5em 1.5em 1em 1.5em;*/
   border-radius: 8px;
   
 
