--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ tw-story {
   left: 50%;
   transform: translateX(-50%);
   top: 1em;
-  /*padding: 1.5em 1.5em 1em 1.5em;*/
+  padding: 1.5em 1.5em 1em 1.5em;
   border-radius: 8px;
   
 
@@ -198,6 +198,9 @@ tw-story {
   transition: background 0.4s ease, backdrop-filter 0.4s ease;
   will-change: backdrop-filter;
 }
+
+tw-sidebar {
+display: none;}
 
 @media (max-width: 768px) {
   .texto {
