--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@ tw-story {
 }
 
 tw-sidebar {
-display: none;}
+display: none !important;}
+
+@media (max-width: 768px) {
+tw-sidebar {
+display: none !important;}
 
 @media (max-width: 768px) {
   .texto {
