--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ tw-story {
   font-size: 22px;
   color: #F8F6F0;
   line-height: 1.3em;
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0 0 5px black, 0 0 10px black;
   letter-spacing: 0.03rem;
   text-align: center;
   z-index: 10;
@@ -213,7 +213,7 @@ tw-sidebar {
     top: 2em !important;
     font-size: 16px;
   width: 100%;
-    text-shadow: 0px 0px 2px black;
+    text-shadow: 0 0 3px black, 0 0 6px black;
     
   }
 }
