--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ Lisandra Caldeira
 
 &lt;&lt;run $(&quot;#story&quot;).hide()&gt;&gt;
 </tw-passagedata><tw-passagedata pid="27" name="Introdução" tags="fundo0" position="825,350" size="100,100">&lt;div class=&quot;texto&quot;&gt;No âmbito da unidade curricular Narrativas Visuais Interativas, queremos que conheça o conto do &lt;i&gt;Patinho Feio&lt;/i&gt; de uma outra perspetiva.
-&lt;br&gt;&lt;br&gt;Desengane-se quem pensa que esta á mais uma história fofinha de penas ao vento. Aqui a vida é dura, e o pato também tenta ser aceite, mas desafia leis de sanidade mental e o seu destino está nas tuas mãos.
+&lt;br&gt;&lt;br&gt;Desengane-se quem pensa que esta é mais uma história fofinha de penas ao vento. Aqui a vida é dura, e o pato também tenta ser aceite, mas desafia leis de sanidade mental e o seu destino está nas tuas mãos.
 &lt;br&gt;&lt;br&gt;Quer estejas no computador ou no telemóvel, sugerimos que utilizes auscultadores para uma experiência mais imersiva e inclusiva.&lt;br&gt;&lt;br&gt;Porque esta nossa história não deixa &lt;i&gt;ninguém de fora&lt;/i&gt;.
 
 
